# IsochronicTone4kGenerator

./: ARCHITECTURE.md  CMakeLists.txt  README.md  fetch_classics.py  get_affiliates.py  master.sh  products.json  render_standard.sh  render_video.sh  run.sh  syndicate.sh  wisdom_text.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
BatchGenerator/: gen_audio.cpp
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
